right-align numeric columns. Fixes #166

--- a/packages/tadviewer/less/app.less
+++ b/packages/tadviewer/less/app.less
@@ -51,6 +51,10 @@
   border-bottom: 1px dotted silver;
 }
 
+.data-cell-numeric {
+  text-align: right;
+}
+
 html,
 body {
   margin: 0;
